[gd_scene load_steps=5 format=3 uid="uid://dv3lnhuc5p0rd"]

[ext_resource type="Script" uid="uid://vaw4rmquy7w1" path="res://scripts/ui/nav/keybind_button.gd" id="1_uu3rw"]
[ext_resource type="Theme" uid="uid://snlsj1gyjpyx" path="res://assets/ui_themes/bold_text.tres" id="2_omywx"]
[ext_resource type="Texture2D" uid="uid://ok6txss2a5bl" path="res://assets/textures/ui_textures/menus/Keys/BUTTONREMAP.png" id="3_ahpmt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uu3rw"]

[node name="KeybindButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uu3rw")
action_name = "move_forward"

[node name="KeybindContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(550, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -40.0
offset_right = 550.0
offset_bottom = 40.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="KeybindContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_omywx")
theme_override_font_sizes/font_size = 25
text = "KEY"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="KeybindContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_uu3rw")

[node name="HBoxContainer" type="HBoxContainer" parent="KeybindContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="key" type="TextureButton" parent="KeybindContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_ahpmt")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="KeybindContainer/HBoxContainer/key"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Label" type="Label" parent="KeybindContainer/HBoxContainer/key"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_omywx")
theme_override_font_sizes/font_size = 18
text = "PRESS A KEY..."

[connection signal="toggled" from="KeybindContainer/HBoxContainer/key" to="." method="_on_key_toggled"]
